Fixes hover state styling not showing up

--- a/src/components/landingPageHero.module.scss
+++ b/src/components/landingPageHero.module.scss
@@ -1,7 +1,7 @@
 @import "../styles/colors";
 
 .hero {
-  padding: 10rem 0;
+  padding: 10rem 3rem;
 
   .text {
     flex: 1;
